--- a/index.html
+++ b/index.html
@@ -4,31 +4,33 @@
 <meta charset="utf-8">
 <title>Responsive Layout</title>
 <link rel="stylesheet" href="css/style.css" type="text/css" media="all">
-<head>
-<body>  
-    <h2>Our Menu</h2>
-    <div class="row">
-        <div class="col-lg-3 col-md-6 class1">
-            <div class="">
-                <p>Item 1-Hello World</p>
-            </div>
-        </div>
+</head>
+<body>	
+	<h2>Our Menu</h2>
+	<div class="container">
+        <ul>
+            <li> 
+            	<div class="bottomp"><p><strong>Chicken</strong></p></div>
+            	<div class="bottom">
+            		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+            		</p>
+            	</div> 
+            </li>
+            <li> 
+            	<div class="bottomp2"><p><strong>Beef</strong></p></div>
+            	<div class="bottom">
+            		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+            		</p>
+            	</div> 
+            </li>
+            <li> 
+            	<div class="bottomp3"><p><strong>Suchi</strong></p></div>
+            	<div class="bottom">
+            		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+            		</p>
+            	</div>
+            </li>            
+        </ul>
     </div>
-    <div class="row2">
-        <div class="col-lg-3 col-md-6 class2">
-            <div class="">
-                <p>Item 2 WOW this color</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="row">
-        <div class="col-lg-3 col-md-12 class3">
-            <div class="">
-                <p>Item 3</p>
-            </div>
-        </div>
-    </div>
-
 </body>
 </html>
