--- a/index.html
+++ b/index.html
@@ -10,21 +10,21 @@
 	<div class="container">
         <ul>
             <li> 
-            	<div class="bottomp"><p><strong>Chicken</strong></p></div>
+            	<div class="bottomp"><p><strong>Chicken</strong></p></div><br><br><br>
             	<div class="bottom">
             		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
             		</p>
             	</div> 
             </li>
             <li> 
-            	<div class="bottomp2"><p><strong>Beef</strong></p></div>
+            	<div class="bottomp2"><p><strong>Beef</strong></p></div><br><br><br>
             	<div class="bottom">
             		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
             		</p>
             	</div> 
             </li>
             <li> 
-            	<div class="bottomp3"><p><strong>Suchi</strong></p></div>
+            	<div class="bottomp3"><p><strong>Suchi</strong></p></div><br><br><br>
             	<div class="bottom">
             		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
             		</p>
