--- a/index.html
+++ b/index.html
@@ -4,33 +4,38 @@
 <meta charset="utf-8">
 <title>Responsive Layout</title>
 <link rel="stylesheet" href="css/style.css" type="text/css" media="all">
-</head>
-<body>	
-	<h2>Our Menu</h2>
-	<div class="container">
-        <ul>
-            <li> 
-            	<div class="bottomp"><p><strong>Chicken Pice</strong></p></div><br><br><br>
-            	<div class="bottom">
-            		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-            		</p>
-            	</div> 
-            </li>
-            <li> 
-            	<div class="bottomp2"><p><strong>Beef</strong></p></div><br><br><br>
-            	<div class="bottom">
-            		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-            		</p>
-            	</div> 
-            </li>
-            <li> 
-            	<div class="bottomp3"><p><strong>Suchi</strong></p></div><br><br><br>
-            	<div class="bottom">
-            		<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
-            		</p>
-            	</div>
-            </li>            
-        </ul>
-    </div>
+<head>
+<body>
+	<div class="row00">	
+		<h2>Our Menu</h2>
+
+		<div class="row">
+			<div class="">
+				<div class="col-lg-3 col-md-6 class1">
+					<div class="bottomp">
+						<p class="lebel01"><strong>Chicken</strong></p>
+					</div>
+					<strong><p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea  commodo consequat.</p></strong>
+				</div>
+			</div>
+			<div class="">
+				<div class="col-lg-3 col-md-6 class2">
+					<div class="bottomp1">
+						<p class="lebel02"><strong>Beef</strong></p>
+					</div>
+					<strong><p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea  commodo consequat.</p></strong>
+				</div>
+			</div>
+
+			<div class="">
+				<div class="col-lg-3 col-md-11 class3">
+					<div class="bottomp2">
+						<p class="lebel03"><strong>Suchi</strong></p>
+					</div>
+					<strong><p>lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea  commodo consequat.</p></strong>
+				</div>
+			</div>
+		</div>
+	</div>	
 </body>
 </html>
